# projetGenieInfo_public

./: .tern-project  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
CMake/: CMakeLists.txt
actions/: README.md
actions/evaluator/: .eslintrc.json  CODEOWNERS  README.md  action.test.yml  action.yml  batchPromise.js  index.js  index.test.js  package-lock.json  package.json
actions/evaluator/.github/workflows/: codeql-analysis.yml
actions/evaluator/src/: batchPromise.js  grader.js  init.js  printer.js  runner.js  utils.js
actions/evaluator/src/tests/: exporter.js  importer.js  tests.csv  tests.js  tests.numbers
actions/evaluator/src/tests/milestones/colors/: blue.js  index.js
actions/evaluator/src/tests/milestones/statistiques/: dimensions.js  index.js  maxComponentB.js  maxComponentG.js  maxComponentR.js  maxPixel.js  minComponentB.js  minComponentG.js  minComponentR.js  minPixel.js
actions/evaluator/src/tests/milestones/tutorial/: dimensions.js  firstPixel.js  index.js  printPixel.js  secondLine.js  tenthPixel.js
actions/evaluator/tests/: tests.js
actions/evaluator/tests/milestones/statistiques/: dimensions.js  index.js
actions/evaluator/tests/milestones/tutorial/: index.js
actions/issue-mover/: Dockerfile  README.md  action.yml  evaluation.yml
actions/issue-mover/Main/: Main.py  updater.py
estia-image/: .gitignore  CMakeLists.txt
estia-image/src/: estia-image.c  estia-image.h
getopt/: .gitignore  CMakeLists.txt
image-comparator/: CMakeLists.txt  Readme.md
image-comparator/src/: image-comparator.c
images/input/: Readme.md
images/input/random_24x3/: commands.txt
images/input/random_83x86/: commands.txt
imaginator/: CMakeLists.txt  commands  generate.sh
imaginator/base/: main.c
imaginator/random/: main.c
src/lib/: estia-image.c  estia-image.h  imageLib.c  imageLib.h
workflows/: README.md  create-issues.yml  evaluation.yml
